用户名密码注册修改为邮箱密码注册
